--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "jeroennoten/laravel-adminlte": "^1.19",
-        "laravel/framework": "5.3.*",
-        "zizaco/entrust": "5.2.x-dev"
+        "laravel/framework": "5.3.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
