--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "caouecs/laravel-lang": "~3.0",
         "jeroennoten/laravel-adminlte": "^1.19",
         "laravel/framework": "5.3.*",
         "zizaco/entrust": "5.2.x-dev"
