--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "caouecs/laravel-lang": "~3.0",
         "jeroennoten/laravel-adminlte": "^1.19",
         "laravel/framework": "5.3.*",
-        "zizaco/entrust": "5.2.x-dev"
+        "zizaco/entrust": "5.2.x-dev",
+        "laravelcollective/html":"^5.3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
