--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,11 @@
     "require": {
         "php": ">=5.6.4",
         "caouecs/laravel-lang": "~3.0",
+        "gloudemans/shoppingcart": "^2.3",
         "jeroennoten/laravel-adminlte": "^1.19",
         "laravel/framework": "5.3.*",
-        "zizaco/entrust": "5.2.x-dev",
-        "laravelcollective/html":"^5.3.0"
+        "laravelcollective/html": "^5.3.0",
+        "zizaco/entrust": "5.2.x-dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
