--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "barryvdh/laravel-dompdf": "^0.8.0",
         "caouecs/laravel-lang": "~3.0",
         "gloudemans/shoppingcart": "^2.3",
         "jeroennoten/laravel-adminlte": "^1.19",
